# Tracy

./: .env  Cargo.toml  README.md
src/: camera.rs  lib.rs  main.rs  ray.rs
src/hittable/: mod.rs  moving_sphere.rs  sphere.rs
src/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
